<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity1">

    <TextView
        android:text="@string/hello_Activiti1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15px"
        android:orientation="vertical"
        android:background="@drawable/ic_launcher"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblNombre"
            android:text="@string/lblNombre"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombre"
            />

        <TextView
            android:layout_marginTop="15px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblTelefono"
            android:text="@string/lblTelefono"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/txtTelefono"
            />

        <Button
            android:layout_marginTop="25px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            android:id="@+id/btnAdd"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/holo_blue_light"
            android:layout_marginTop="25px"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNombre"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNomBusc"
                />

            <Button
                android:layout_marginTop="25px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnBuscar"
                android:gravity="center"
                android:id="@+id/btnBuscar"
                />



        </LinearLayout>
    </LinearLayout>



</LinearLayout>
