<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.colonias.nelson.pasodatosentreactivity.Activity2">

    <TextView
        android:text="@string/hello_Activiti2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/txtEditNombre"
        android:hint="Introduzca nuevo nombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="30dp"
        android:id="@+id/txtTelefonoEdit"
        android:inputType="phone"
        android:hint="Introduzca nuevo telefono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15px"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/btnEditCancel"
            android:id="@+id/btnEditCancel"
            android:gravity="center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btnEditAdd"
            android:id="@+id/btnEditAdd"
            android:gravity="center"
            />


        </LinearLayout>


</LinearLayout>
